# LIMBO

./: CMakeLists.txt  README.md
cmake/: compile_mbr.cmake  find_programs.cmake  qemu.cmake
helps/: user.asm
scripts/: fill_sec.sh  get_identifier.sh  get_lines.sh  kcopy.sh  link.ld  mbr.ld
scripts/gdb/: debug_in_real_mode.sh  gdb_init_real_mode.gdb  target.xml
src/: entry.c  gpu.c  io.c  printk.c
src/basic/: backtracer.c  die.c  ldt.c  page.c  printk.c  string.c  syscall.c
src/drivers/: gpu.c  ide.c  idt.c  io.c  irq.c  rtc.c
src/include/: backtracer.h  die.h  gpu.h  ide.h  idt.h  io.h  irq.h  ldt.h  marco.h  page.h  printk.h  rtc.h  stdint.h  string.h  syscall.h  types.h
src/mbr/: bootsec.asm  loader.asm
test/: as_compiling_test.asm
